<resources>
    <string name="mnull"></string>
    <string name="app_name">土豆金服</string>
    <string name="app_title">V5</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开以刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>
    <string name="pull_to_refresh_from_bottom_pull_label">@string/pull_to_refresh_pull_label</string>
    <string name="pull_to_refresh_from_bottom_release_label">@string/pull_to_refresh_release_label</string>
    <string name="pull_to_refresh_from_bottom_refreshing_label">@string/pull_to_refresh_refreshing_label</string>
    <string name="no_internet">无网络连接~！</string>
    <string name="generic_server_down">连接服务器失败~！</string>
    <string name="generic_error">网络异常,请稍后再试~！</string>
    <string name="loading_for_more_tips">没有更多数据</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_end_load_more"></string>
    <string name="progress_wait">请等待...</string>
    <string name="p2refresh_release_refresh">松开刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="common_display_money_default">0.00</string>
    <string name="common_display_title_default">标题</string>
    <string name="common_display_time_default">时间</string>
    <string name="common_display_status_default">状态</string>
    <string name="common_display_type_default">类型</string>
    <string name="common_display_yuan_default">元</string>
    <string name="common_display_phone_default">188****1234</string>
    <string name="common_display_version_default">V1.0</string>
    <string name="common_operate_on_pc">该功能手机端暂未开放，请到PC端操作！</string>
    <string name="common_no_more_record">无更多记录</string>
    <string name="common_di">第</string>
    <string name="common_peroid">期</string>
    <string name="common_ten_thousand_yuan">万元</string>
    <string name="common_ten_thousand">万</string>
    <string name="common_null">无</string>
    <string name="common_deadline">期限 </string>
    <string name="common_day">天 </string>
    <string name="common_month">个月 </string>
    <string name="common_peroid_sum">共</string>
    <string name="common_check">查看</string>
    <string name="common_loan_agreement">《借款协议》</string>
    <string name="common_loan_agreement_text">借款协议</string>
    <string name="common_creditor_transfer_agreement">《债权转让协议》</string>
    <string name="common_creditor_transfer_agreement_text">债权转让协议</string>
    <string name="common_web_agreement_text">网站服务协议</string>
     <string name="common_next">下一步</string>
     <string name="common_phone">手机</string>
     <string name="common_pick_photo">相册选择</string>
     <string name="common_take_photo">相机拍照</string>
     <string name="remind_data_parse_exception">数据解析异常</string>
     <string name="remind_input_bankcard">请输入银行卡卡号</string>
     <string name="remind_input_bankcard_sixteen">请输入至少16位的银行卡号</string>
     <string name="remind_input_old_bankcard">请输入原卡号</string>
     <string name="remind_submit_new_bankcard">请确认新卡号</string>
     <string name="remind_input_new_bankcard">请输入新卡号</string>
     <string name="remind_input_pwd">请输入密码</string>
     <string name="remind_input_email">请输入邮箱号</string>
     <string name="remind_input_phone_num">请输入手机号码</string>
     <string name="remind_bind_bank_card">请先绑定银行卡</string>
     <string name="remind_bind_email">请绑定邮箱</string>
     <string name="remind_bind_phone">请绑定手机</string>
     <string name="remind_input_name">请输入姓名</string>
     <string name="remind_input_login_pwd">请输入登录密码</string>
     <string name="remind_input_chinese_name">请输入中文姓名</string>
     <string name="remind_input_id">请输入身份证号</string>
     <string name="remind_add_id_photo">请添加身份证正反面照</string>
     <string name="remind_set_pay_password">请设置支付密码</string>
     <string name="remind_login">请先登录</string>
     <string name="remind_new_bankcard_different">新卡号输入不一致</string>
     <string name="remind_old_new_bankcard_different">新卡号不能与原卡号一致</string>
     <string name="remind_error_old_bankcard">原卡号错误,请重新输入</string>
     <string name="remind_email_already_use">该邮箱已被验证,请重新输入</string>
     <string name="remind_phone_already_use">该手机已被绑定，请重新输入</string>
     <string name="remind_input_user_name">请输入用户名</string>
     <string name="remind_input_bid_password">请输入投资密码</string>
     <string name="remind_input_pay_password">请输入6–15位的支付密码</string>
     <string name="remind_input_login_password">密码应为6–15位的数字和字母组合！</string>
     <string name="remind_pwd_illegal_word">密码存在非法字符</string>
     <string name="remind_pwd_illegal">密码不合法</string>
     <string name="remind_pwd_all_num">密码不能为纯数字</string>
     <string name="remind_pwd_all_letter">密码不能为纯字母</string>
     <string name="remind_input_correct_phone">请输入正确的手机号！</string>
     <string name="remind_input_correct_auth_code">请输入正确的验证码</string>
     <string name="remind_send_auth_code_first">请先发送验证码</string>
     <string name="remind_input_auth_code">请输入验证码</string>
     <string name="remind_six_auth_code">验证码为6位数</string>
     <string name="remind_select_opening_bank">请选择开户行</string>
     <string name="remind_input_opening_bank_name">请输入开户行名称</string>
     <string name="remind_select_bank_city">请选择开户行所在省市</string>
     <string name="remind_bind_bank_card_succeed">绑定银行卡成功</string>
     <string name="remind_bind_user_no_exist">该账号尚未注册，请注册！</string>
     <string name="remind_input_money_ten_multiple">输入金额必须为10的倍数</string>
     <string name="remind_account_no_money">账户余额不足</string>
     <string name="remind_bid_less_than_base">投资不能小于起投金额</string>
     <string name="remind_bid_more_than_transfer">不能大于最高转让价格</string>
     <string name="remind_not_bid_self">不能投自己的标</string>
     <string name="remind_input_phone_auth_code">请输入手机短信验证码</string>
     <string name="remind_service_info_error">客服信息获取失败</string>
    <string name="remind_send_succeed">发送成功</string>
    <string name="remind_transfer_succeed">转让成功</string>
    <string name="remind_bid_succeed">投资成功</string>
    <string name="remind_bid_fail">投资失败</string>
    <string name="remind_buy_succeed">购买成功</string>
    <string name="remind_buy_fail">购买失败</string>
    <string name="remind_withdraw_succeed">提现成功</string>
    <string name="remind_withdraw_fail">提现失败</string>
    <string name="remind_recharge_succeed">充值成功</string>
    <string name="remind_recharge_fail">充值失败</string>
    <string name="remind_bind_succeed">绑定成功</string>
    <string name="remind_bind_fail">绑定失败</string>
    <string name="remind_unbind_succeed">解绑成功</string>
    <string name="remind_unbind_fail">解绑失败</string>
    <string name="remind_settlement_succeed">结算成功</string>
    <string name="remind_register_succeed">注册成功</string>
    <string name="remind_register_fail">注册失败</string>
    <string name="remind_login_succeed">登录成功</string>
    <string name="remind_update_succeed">修改成功</string>
    <string name="remind_set_succeed">设置成功</string>
     <string name="remind_load_fail">加载失败</string>
     <string name="remind_loading">正在加载中…</string>
     <string name="remind_no_data">暂无数据</string>
     <string name="remind_no_more_data">无更多数据</string>
     <string name="remind_no_more_record">无更多记录</string>
     <string name="remind_one_more_exit">再按一次退出</string>
     <string name="remind_promotion_url_error">推广链接错误，请刷新后重试</string>
     <string name="remind_wait_check">数据上传成功，等待审核</string>
     <string name="remind_phone_error">手机号码格式错误</string>
     <string name="remind_email_error">邮箱账号格式错误</string>
     <string name="remind_phone_no_exist">该手机不存在</string>
     <string name="remind_email_no_exist">该邮箱不存在</string>
     <string name="remind_dialog_login">登录中…</string>
     <string name="remind_dialog_pay">支付中…</string>
     <string name="remind_dialog_connect">连接中…</string>
     <string name="remind_dialog_transfer">转让中…</string>
     <string name="remind_dialog_loading">加载中…</string>
     <string name="remind_dialog_set">设置中…</string>
     <string name="dialog_title_set_paypassword">支付密码</string>
     <string name="dialog_subtitle_set_paypassword">您还未设置支付密码，是否现在去设置?</string>
     <string name="dialog_title_set_realname">实名认证</string>
     <string name="dialog_subtitle_set_realname">您还未实名认证，是否现在认证?</string>
     <string name="dialog_title_bind_phone">手机绑定</string>
     <string name="dialog_subtitle_bind_phone">您还未绑定手机，是否现在绑定?</string>
     <string name="dialog_title_forgot_gesture">忘记手势密码</string>
     <string name="dialog_subtitle_forgot_gesture">需要重新登录账号?</string>
     <string name="dialog_title_set_gesture">登录成功！</string>
     <string name="dialog_subtitle_set_gesture">马上设置手势密码?</string>
     <string name="dialog_title_exit_login">退出登录</string>
     <string name="dialog_subtitle_exit_login">你确定退出登录吗?</string>
     <string name="dialog_title_version_updating">版本更新</string>
     <string name="dialog_subtitle_version_updating">发现最新版本：</string>
    <string name="titlelayout_back">返回</string>
    <string name="titlelayout_before_login">填写注册或登录账号</string>
    <string name="titlelayout_recommended">填写推荐人</string>
    <string name="titlelayout_login">登录</string>
    <string name="titlelayout_register">注册</string>
    <string name="mainactivity_tab_home">首页</string>
    <string name="mainactivity_tab_investment">我要投资</string>
    <string name="mainactivity_tab_loan">我的借款</string>
    <string name="mainactivity_tab_account">个人中心</string>
    <string name="homefragment_login">立即登录</string>
    <string name="homefragment_register">立即注册</string>
    <string name="homefragment_start_making_money">开始赚钱</string>
    <string name="homefragment_annual_income">年化收益</string>
    <string name="homefragment_ad">理财从这里起航！</string>
     <string name="homefragment_wap_title">帝友V5wap端</string>
	<string name="ad_title_new_forecast">新标预告</string>
    <string name="investmentfragment_title">我要投资</string>
    <string name="investmentfragment_population">投资人数：</string>
    <string name="investmentfragment_guarantee">担保方:</string>
    <string name="loginactivity_login">立即登录</string>
    <string name="loginactivity_password_login">密码登录</string>
    <string name="loginactivity_code_login">验证码登录</string>
    <string name="loginactivity_account_login">账号登录</string>
    <string name="loginactivity_input_pwd">请输入您的登录密码</string>
    <string name="loginactivity_forget_password">忘记密码?</string>
    <string name="registeractivity_send_verification_code">发送验证码</string>
    <string name="registeredactivity_regeist_sendsms_partA">已经向</string>
    <string name="registeredactivity_regeist_sendsms_partB">发送短信，请输入短信验证码完成注册。</string>
    <string name="my_promotion_person_num">邀请人数:</string>
    <string name="my_promotion_invest_money">投资提成:</string>
    <string name="my_promotion_invest_sum">提成总额:</string>
    <string name="my_promotion_borrow_refund">借款还款提成:</string>
    <string name="my_promotion_record">推广记录</string>
    <string name="my_promotion_clear_record">结算记录</string>
    <string name="my_promotion_look">查看</string>
    <string name="my_promotion_residue_money">当前剩余结算金额:</string>
    <string name="my_promotion_full">满</string>
    <string name="my_promotion_clear_now">立即结算</string>
    <string name="my_promotion_ten_yuan">10元</string>
    <string name="my_promotion_clear_one_time">结算一次</string>
    <string name="my_promotion_clearing">结算中:</string>
    <string name="my_promotion_tab_user_name">用户名</string>
    <string name="my_promotion_tab_invest_sum">投资总额(元)</string>
    <string name="my_promotion_tab_refund_sum">还款总额(元)</string>
    <string name="settlement_record_money">结算金额(元)</string>
    <string name="settlement_record_time">时间</string>
    <string name="settlement_record_status">状态</string>
</resources>