<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFEFF4"
    android:orientation="vertical"
    tools:context=".LoginActivity" >

    <RelativeLayout
        android:id="@+id/loginactivity_headlayout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/layout_title_bg" >

        <TextView
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/titlelayout_login"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/loginactivity_back"
            style="@style/ButtonBack"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/mnull" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/loginactivity_account_login"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/loginactivity_telephone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/loginactivity_pwd"
                style="@style/editText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/loginactivity_input_pwd"
                android:inputType="textPassword" >
            </EditText>

            <Button
                android:id="@+id/updatamobilephone_code_btn"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:gravity="center"
                android:text="@string/registeractivity_send_verification_code"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone" />
        </LinearLayout>

        <Button
            android:id="@+id/loginactivity_btn_sumbit"
            style="@style/button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/loginactivity_login"
            android:enabled="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/loginactivity_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:text="@string/loginactivity_forget_password"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/loginactivity_prompt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/registeredactivity_regeist_sendsms_partA"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/loginactivity_telephone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:text="@string/registeredactivity_regeist_sendsms_partB"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/accountfragment_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white" >

        <TextView
            android:id="@+id/loginactivity_password_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:focusable="true"
            android:gravity="center"
            android:text="@string/loginactivity_password_login"
            android:textColor="@drawable/login_text_font"
            android:textSize="16sp" />

        <View
            android:layout_width="@dimen/margin_size_0.1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/loginactivity_code_login"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/loginactivity_code_login"
            android:textColor="@drawable/login_text_font"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>