<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:padding="8dp" >

        <TextView
            android:id="@+id/tv_my_promotion_item_user"
            style="@style/common_black_small_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/my_promotion_tab_user_name"
            android:paddingLeft="8dp" />

        <TextView
            android:id="@+id/tv_my_promotion_item_invest"
            style="@style/common_black_small_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/my_promotion_tab_invest_sum" 
            android:paddingLeft="8dp" />

        <TextView
            android:id="@+id/tv_my_promotion_item_refund"
            style="@style/common_black_small_textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:text="@string/my_promotion_tab_refund_sum"
            android:paddingLeft="8dp" />

    </LinearLayout>

</LinearLayout>
